--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
     <div class="container">
         <div class="sidebar">
-            <img src="ruta_de_la_imagen.jpg" alt="Imagen de ejemplo" width="200" height="150">
+            <img src="logo/logouaemex.jpg" alt="Imagen de ejemplo" width="200" height="150">
             
 
         </div>
