--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="container">
         <div class="sidebar">
             <img src="logo/logouaemex.jpg" alt="logo" width="400" height="400">
-            
+            <p><strong><span style="color: blue;">Instalaciones y Seguridad Informatica</span></strong></p>
 
         </div>
         <div class="content">
